--- a/src/stories/embed/UpgradeBar.scss
+++ b/src/stories/embed/UpgradeBar.scss
@@ -8,6 +8,6 @@
   text-align: center;
 
   > li {
-    text-shadow: 0px 0px 5px #000;
+    text-shadow: 0px 0px 10px #000;
   }
 }
